--- a/_config.yml
+++ b/_config.yml
@@ -177,7 +177,7 @@ collections:
     output: false
     permalink: /:collection/:path/
   publications:
-    output: true
+    output: false
     permalink: /:collection/:path/
   portfolio:
     output: false
