--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ social:
 # Site Author
 author:
   name             : "Rodrigo R. Amadeu"
-  avatar           : "profile.png"
+  avatar           : "IMG_2329.jpg"
   bio              : "Plant Genomics & Breeding PhD student"
   location         : "University of Florida"
   employer         :
