--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/rodrigo-amadeu-93b61a1a7"
+  linkedin         : "rodrigo-amadeu-93b61a1a7"
   orcid            : "https://orcid.org/0000-0001-5127-4448"
   pinterest        :
   soundcloud       :
